crates/test-ui/ui/declare_class_invalid_type.stderr
error[E0277]: the trait bound `Id<CustomObject>: Encode` is not satisfied
 --> ui/declare_class_invalid_type.rs
  |
  | / declare_class!(
  | |     struct CustomObject;
  | |
  | |     unsafe impl ClassType for CustomObject {
... |
  | |     }
  | | );
  | |_^ the trait `Encode` is not implemented for `Id<CustomObject>`
  |
  = help: the following other types implement trait `Encode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `Id<CustomObject>` to implement `EncodeReturn`
  = note: required for `Id<CustomObject>` to implement `__macro_helpers::convert::return_private::Sealed`
note: required by a bound in `ConvertReturn`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/convert.rs
  |
  | pub trait ConvertReturn: return_private::Sealed {
  |                          ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ConvertReturn`
  = note: `ConvertReturn` is a "sealed trait", because to implement it you also need to implement `objc2::__macro_helpers::convert::return_private::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            bool
            T
  = note: this error originates in the macro `$crate::__declare_class_method_out_inner` which comes from the expansion of the macro `declare_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Vec<()>: Encode` is not satisfied
 --> ui/declare_class_invalid_type.rs
  |
  | / declare_class!(
  | |     struct CustomObject;
  | |
  | |     unsafe impl ClassType for CustomObject {
... |
  | |     }
  | | );
  | |_^ the trait `Encode` is not implemented for `Vec<()>`
  |
  = help: the following other types implement trait `Encode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `Vec<()>` to implement `EncodeReturn`
  = note: required for `Vec<()>` to implement `__macro_helpers::convert::return_private::Sealed`
note: required by a bound in `ConvertReturn`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/convert.rs
  |
  | pub trait ConvertReturn: return_private::Sealed {
  |                          ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ConvertReturn`
  = note: `ConvertReturn` is a "sealed trait", because to implement it you also need to implement `objc2::__macro_helpers::convert::return_private::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            bool
            T
  = note: this error originates in the macro `$crate::__declare_class_method_out_inner` which comes from the expansion of the macro `declare_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Box<u32>: Encode` is not satisfied
 --> ui/declare_class_invalid_type.rs
  |
  | / declare_class!(
  | |     struct CustomObject;
  | |
  | |     unsafe impl ClassType for CustomObject {
... |
  | |     }
  | | );
  | |_^ the trait `Encode` is not implemented for `Box<u32>`
  |
  = help: the following other types implement trait `Encode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `Box<u32>` to implement `EncodeArgument`
  = note: required for `Box<u32>` to implement `__macro_helpers::convert::argument_private::Sealed`
note: required by a bound in `ConvertArgument`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/convert.rs
  |
  | pub trait ConvertArgument: argument_private::Sealed {
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ConvertArgument`
  = note: `ConvertArgument` is a "sealed trait", because to implement it you also need to implement `objc2::__macro_helpers::convert::argument_private::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            std::option::Option<&mut objc2::rc::Id<T>>
            std::option::Option<&mut std::option::Option<objc2::rc::Id<T>>>
            &mut std::option::Option<objc2::rc::Id<T>>
            &mut objc2::rc::Id<T>
            bool
            T
  = note: this error originates in the macro `$crate::__declare_class_rewrite_params` which comes from the expansion of the macro `declare_class` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `CustomObject: Encode` is not satisfied
 --> ui/declare_class_invalid_type.rs
  |
  | / declare_class!(
  | |     struct CustomObject;
  | |
  | |     unsafe impl ClassType for CustomObject {
... |
  | |     }
  | | );
  | |_^ the trait `Encode` is not implemented for `CustomObject`
  |
  = help: the following other types implement trait `Encode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `CustomObject` to implement `EncodeArgument`
  = note: required for `CustomObject` to implement `__macro_helpers::convert::argument_private::Sealed`
note: required by a bound in `ConvertArgument`
 --> $WORKSPACE/crates/objc2/src/__macro_helpers/convert.rs
  |
  | pub trait ConvertArgument: argument_private::Sealed {
  |                            ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ConvertArgument`
  = note: `ConvertArgument` is a "sealed trait", because to implement it you also need to implement `objc2::__macro_helpers::convert::argument_private::Sealed`, which is not accessible; this is usually done to force you to use one of the provided types that already implement it
  = help: the following types implement the trait:
            std::option::Option<&mut objc2::rc::Id<T>>
            std::option::Option<&mut std::option::Option<objc2::rc::Id<T>>>
            &mut std::option::Option<objc2::rc::Id<T>>
            &mut objc2::rc::Id<T>
            bool
            T
  = note: this error originates in the macro `$crate::__declare_class_rewrite_params` which comes from the expansion of the macro `declare_class` (in Nightly builds, run with -Z macro-backtrace for more info)
